Dillo project
=============================================================================

dillo-2.1

+- Added ipv6 addresses iteration and ipv4 fallback.
   Patch: James Turner, Jorge Arellano Cid
+- Added support for numeric IPv6 addresses entered into the url bar.
 - Used the URL authority part instead of stripped default port in HTTP query.
 - Made the DNS resolver report in numeric address notation.
   Patches: Justus Winter
+- Fix for file inputs without values (forms).
 - Tuned input width a bit.
 - Cleaned up resource embedding (forms)
 - Made cookierc parsing more robust.
 - Switched a_UIcmd_save() to take its URL from history (not location bar).
 - Set prefs.vw_fontname as deafult font for the UI.
 - Fix: recover page focus when clicking-out of a widget.
 - Fixed a segfault bug in the test/ directory.
 - Set middle click to submit in a new TAB. (Helps to keep form data!)
 - Added support for the Q element. BUG#343
 - Cleaned up Html_pop_tag().
 - Ported the command line interface from dillo1 (XID not working yet).
 - Switched file dpi error messages to HTML.
 - Added a popup menu to form's submit button.
 - Added a right-click menu to the form submit button (allows to show hiddens).
 - Added the "http_language" dillorc option for setting HTTP's Accept-Language.
   Patches: place (AKA corvid)
+- Switched SSL-enabled to configure.in (./configure --enable-ssl).
 - Standardised the installation of dpid/dpidrc with auto* tools.
 - Set the ScrollGroup as the resizable widget in downloads dpi.
 - Cleaned up and normalized D_SUN_LEN usage.
 - Fixed incorrect use of VOIDP2INT in Dialog_user_password_cb().
 - Ensure that the dlib dStr* functions are used everywhere.
 - Fixed a leak in Html_tag_open_link().
   Patches: Jeremy Henty
+- Implemented Basic authentication!
   Patch: Jeremy Henty, Jorge Arellano Cid
+- Allowed compilation with older machines by removing a few C99isms.
 - Added use of inttypes.h when stdint.h isn't found.
   Patches: Dan Fandrich